[package]
name = "pxher0"
version = "0.1.0"
authors = ["Kristin Davidson <k@kxd.dev>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
embedded-hal = "0.2.4"

[dependencies.stm32l0xx-hal]
version = "0.6.2"
features = ["stm32l0x2", "rt"]
